unpackaged/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Caractère actif / inactif du contact</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>