unpackaged/main/default/objects/Contact/fields/Affinity_to_CEGID__c.field-meta.xml
<CustomField>
    <fullName>Affinity_to_CEGID__c</fullName>
    <label>Affinity to CEGID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affinity_to_CEGID</valueSetName>
    </valueSet>
</CustomField>