unpackaged/main/default/objects/Contact/fields/ATTRILTSource__c.field-meta.xml
<CustomField>
    <fullName>ATTRILTSource__c</fullName>
    <label>Last Touch Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>