unpackaged/main/default/objects/Contact/fields/AttrLTcontent__c.field-meta.xml
<CustomField>
    <fullName>AttrLTcontent__c</fullName>
    <label>Last Touch Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>