unpackaged/main/default/objects/Contact/fields/BuyerPersonaCPA__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaCPA__c</fullName>
    <label>Buyer Persona CPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>