unpackaged/main/default/objects/Contact/fields/BuyerPersonaPortailTPE__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaPortailTPE__c</fullName>
    <label>Buyer Persona Portail TPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>