unpackaged/main/default/objects/Contact/fields/CegidRole__c.field-meta.xml
<CustomField>
    <fullName>CegidRole__c</fullName>
    <label>Cegid Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoices contact</fullName>
            </value>
            <value>
                <fullName>Payment contact</fullName>
            </value>
            <value>
                <fullName>Contact for payment business</fullName>
            </value>
            <value>
                <fullName>PO Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>