unpackaged/main/default/objects/Contact/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <defaultValue>"005"</defaultValue>
    <description>Used for Additionnal Order - W-002451</description>
    <label>Channel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>