unpackaged/main/default/objects/Contact/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>To store the comments from the Sales Rep</description>
    <inlineHelpText>Do not write any excessive or insulting comments or any sensitive data (racial origin, political opinions, religious beliefs, health data, social security number…)</inlineHelpText>
    <label>Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>