unpackaged/main/default/objects/Contact/fields/Compliant__c.field-meta.xml
<CustomField>
    <fullName>Compliant__c</fullName>
    <description>Compliance to authorize opportunity / quote creation</description>
    <formula>AND (
				NOT(ISBLANK( TEXT(Salutation ))),
				NOT(ISBLANK( LastName )),
				NOT(ISBLANK( FirstName )),
				NOT(ISBLANK( Email )), 
			 OR (	NOT(ISBLANK( Phone )), 
								 NOT(ISBLANK(MobilePhone  )), 
							  NOT(ISBLANK( Direct_Phone__c ))
							),								  
				NOT(ISBLANK(TEXT(Service__c ))),
				NOT(ISBLANK(TEXT(Function__c)))
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliant</label>
    <type>Checkbox</type>
</CustomField>