unpackaged/main/default/objects/Contact/fields/Contact_created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Contact_created_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact created from Lead</label>
    <type>Checkbox</type>
</CustomField>