unpackaged/main/default/objects/Contact/fields/Contact_Origin__c.field-meta.xml
<CustomField>
    <fullName>Contact_Origin__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>"Sales"</defaultValue>
    <description>To identify the data source: "Marketing" if it cames from Lead's standard conversion; "Sales" if it cames from a Sales Rep; and Others values inserted through Data import files (this field must be fulfilled in the loading file BEFORE insert)</description>
    <label>Contact Origin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>