unpackaged/main/default/objects/Contact/fields/Contact_RT_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_RT_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact RT Name</label>
    <type>Text</type>
</CustomField>