unpackaged/main/default/objects/Contact/fields/Contact_TS__c.field-meta.xml
<CustomField>
    <fullName>Contact_TS__c</fullName>
    <formula>IF( 
				ISPICKVAL(Manual_Sync_TS__c, 'Yes'),
				true,
				IF(
					ISPICKVAL(Manual_Sync_TS__c, 'No'),
					false,
					IF(
						TECH_IS_TS__c, 
						true, 
						IF(
							AND(
								NOT(ISBLANK(Requester_name__c)),
							    NOT(ISPICKVAL(Language_in_the_Community__c, ""))
							), 
							true, 
							false
							)
						)
				)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact TS</label>
    <type>Checkbox</type>
</CustomField>