unpackaged/main/default/objects/Contact/fields/Customer_Support_Access__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Support Access</label>
    <type>Checkbox</type>
</CustomField>