unpackaged/main/default/objects/Contact/fields/Customer_User_Only__c.field-meta.xml
<CustomField>
    <fullName>Customer_User_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer User Only</label>
    <type>Checkbox</type>
</CustomField>