unpackaged/main/default/objects/Contact/fields/Decision_Maker_Core_Business_2__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Core_Business_2__c</fullName>
    <label>Decision Maker Core Business - 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core_Business</valueSetName>
    </valueSet>
</CustomField>