unpackaged/main/default/objects/Contact/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <label>Employee ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>