unpackaged/main/default/objects/Contact/fields/FunctionId__c.field-meta.xml
<CustomField>
    <fullName>FunctionId__c</fullName>
    <label>Function Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>