unpackaged/main/default/objects/Contact/fields/HasCegidRoleContactPayment__c.field-meta.xml
<CustomField>
    <fullName>HasCegidRoleContactPayment__c</fullName>
    <formula>INCLUDES( CegidRole__c , "Contact for payment business")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Cegid Role Contact Payment</label>
    <type>Checkbox</type>
</CustomField>