unpackaged/main/default/objects/Contact/fields/Is_WebCallBack__c.field-meta.xml
<CustomField>
    <fullName>Is_WebCallBack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True si le contact à rempli un formulaire MKTO de webCallBack</description>
    <label>Is WebCallBack</label>
    <type>Checkbox</type>
</CustomField>