unpackaged/main/default/objects/Contact/fields/Language_in_the_Community__c.field-meta.xml
<CustomField>
    <fullName>Language_in_the_Community__c</fullName>
    <label>Language in the Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>