unpackaged/main/default/objects/Contact/fields/Last_WebCallBack__c.field-meta.xml
<CustomField>
    <fullName>Last_WebCallBack__c</fullName>
    <description>Date de dernier formulaire Web Call Back de renseigné</description>
    <label>Last WebCallBack</label>
    <type>DateTime</type>
</CustomField>