unpackaged/main/default/objects/Contact/fields/Lead_s_Chosen_Solution__c.field-meta.xml
<CustomField>
    <fullName>Lead_s_Chosen_Solution__c</fullName>
    <label>Chosen Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chosen_Solution</valueSetName>
    </valueSet>
</CustomField>