unpackaged/main/default/objects/Contact/fields/LeadOrigin__c.field-meta.xml
<CustomField>
    <fullName>LeadOrigin__c</fullName>
    <label>Lead Origin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>