unpackaged/main/default/objects/Contact/fields/Marketing_Status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Status__c</fullName>
    <label>Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Status</valueSetName>
    </valueSet>
</CustomField>