unpackaged/main/default/objects/Contact/fields/Mkto_behavior_score__c.field-meta.xml
<CustomField>
    <fullName>Mkto_behavior_score__c</fullName>
    <label>Behavior Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>