unpackaged/main/default/objects/Contact/fields/Mkto_email_double_opt_in_date__c.field-meta.xml
<CustomField>
    <fullName>Mkto_email_double_opt_in_date__c</fullName>
    <label>Email Double Opt-in Date (CRM)</label>
    <type>Date</type>
</CustomField>