unpackaged/main/default/objects/Contact/fields/Mkto_email_invalid_date__c.field-meta.xml
<CustomField>
    <fullName>Mkto_email_invalid_date__c</fullName>
    <label>Email Invalid Date (CRM)</label>
    <type>Date</type>
</CustomField>