unpackaged/main/default/objects/Contact/fields/Mkto_email_simple_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Mkto_email_simple_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Simple Opt-in (CRM)</label>
    <type>Checkbox</type>
</CustomField>