unpackaged/main/default/objects/Contact/fields/Mkto_marketing_suspended__c.field-meta.xml
<CustomField>
    <fullName>Mkto_marketing_suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing suspended (CRM)</label>
    <type>Checkbox</type>
</CustomField>