unpackaged/main/default/objects/Contact/fields/Mkto_marketo_sync__c.field-meta.xml
<CustomField>
    <fullName>Mkto_marketo_sync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync to Marketo</label>
    <type>Checkbox</type>
</CustomField>