unpackaged/main/default/objects/Contact/fields/Mkto_owner_full_name__c.field-meta.xml
<CustomField>
    <fullName>Mkto_owner_full_name__c</fullName>
    <formula>Owner.FirstName &amp;" "&amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner full name</label>
    <type>Text</type>
</CustomField>