unpackaged/main/default/objects/Contact/fields/Mkto_owner_is_queue__c.field-meta.xml
<CustomField>
    <fullName>Mkto_owner_is_queue__c</fullName>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is queue</label>
    <type>Checkbox</type>
</CustomField>