unpackaged/main/default/objects/Contact/fields/Mkto_owner_is_user__c.field-meta.xml
<CustomField>
    <fullName>Mkto_owner_is_user__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is user</label>
    <type>Checkbox</type>
</CustomField>