unpackaged/main/default/objects/Contact/fields/Mkto_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Mkto_Owner_Role__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>