unpackaged/main/default/objects/Contact/fields/Mkto_webform_requests__c.field-meta.xml
<CustomField>
    <fullName>Mkto_webform_requests__c</fullName>
    <label>Webform Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>