unpackaged/main/default/objects/Contact/fields/No_of_Contact_with_Role__c.field-meta.xml
<CustomField>
    <fullName>No_of_Contact_with_Role__c</fullName>
    <formula>IF(NOT(ISBLANK(CegidRole__c)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Contact with Role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>