unpackaged/main/default/objects/Contact/fields/Outreach_Actively_Being_Sequenced__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Actively_Being_Sequenced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actively Being Sequenced</label>
    <type>Checkbox</type>
</CustomField>