unpackaged/main/default/objects/Contact/fields/Outreach_Current_Sequence_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Step_Number__c</fullName>
    <label>Current Sequence Step Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>