unpackaged/main/default/objects/Contact/fields/P_Center_Cust_Care_Info__c.field-meta.xml
<CustomField>
    <fullName>P_Center_Cust_Care_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In Cust. Care Info</label>
    <type>Checkbox</type>
</CustomField>