unpackaged/main/default/objects/Contact/fields/P_Center_Cust_Care_Info_Update__c.field-meta.xml
<CustomField>
    <fullName>P_Center_Cust_Care_Info_Update__c</fullName>
    <label>Opt In Cust. Care Info Update</label>
    <type>Date</type>
</CustomField>