unpackaged/main/default/objects/Contact/fields/P_Center_Freeze_30_Days__c.field-meta.xml
<CustomField>
    <fullName>P_Center_Freeze_30_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In Freeze 30 Days</label>
    <type>Checkbox</type>
</CustomField>