unpackaged/main/default/objects/Contact/fields/P_Center_News_CPA__c.field-meta.xml
<CustomField>
    <fullName>P_Center_News_CPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In News CPA</label>
    <type>Checkbox</type>
</CustomField>