unpackaged/main/default/objects/Contact/fields/P_Center_News_ERP__c.field-meta.xml
<CustomField>
    <fullName>P_Center_News_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In News ERP</label>
    <type>Checkbox</type>
</CustomField>