unpackaged/main/default/objects/Contact/fields/P_Center_News_HCM__c.field-meta.xml
<CustomField>
    <fullName>P_Center_News_HCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In News HCM</label>
    <type>Checkbox</type>
</CustomField>