unpackaged/main/default/objects/Contact/fields/P_Center_News_Retail_Update__c.field-meta.xml
<CustomField>
    <fullName>P_Center_News_Retail_Update__c</fullName>
    <label>Opt In News Retail Update</label>
    <type>Date</type>
</CustomField>