unpackaged/main/default/objects/Contact/fields/P_Center_News_SB__c.field-meta.xml
<CustomField>
    <fullName>P_Center_News_SB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In News SB</label>
    <type>Checkbox</type>
</CustomField>