unpackaged/main/default/objects/Contact/fields/P_Center_Survey__c.field-meta.xml
<CustomField>
    <fullName>P_Center_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In Survey</label>
    <type>Checkbox</type>
</CustomField>