unpackaged/main/default/objects/Contact/fields/Phone_WebCallBack__c.field-meta.xml
<CustomField>
    <fullName>Phone_WebCallBack__c</fullName>
    <description>Num téléphone renseigné sur le formaulaire MKTO de Web Call Back</description>
    <label>Phone WebCallBack</label>
    <length>30</length>
    <type>Text</type>
</CustomField>