unpackaged/main/default/objects/Contact/fields/Previous_Contact_Affinity_to_CEGID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contact_Affinity_to_CEGID__c</fullName>
    <formula>TEXT( Previous_Contact__r.Affinity_to_CEGID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Contact Affinity to CEGID</label>
    <type>Text</type>
</CustomField>