unpackaged/main/default/objects/Contact/fields/Requester_name__c.field-meta.xml
<CustomField>
    <fullName>Requester_name__c</fullName>
    <label>Requester name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>