unpackaged/main/default/objects/Contact/fields/SectorCode__c.field-meta.xml
<CustomField>
    <fullName>SectorCode__c</fullName>
    <label>Sector Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>