unpackaged/main/default/objects/Contact/fields/Sync_to_PRM__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_PRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to PRM</label>
    <type>Checkbox</type>
</CustomField>