unpackaged/main/default/objects/Contact/fields/TECH_Email__c.field-meta.xml
<CustomField>
    <fullName>TECH_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>TECH Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>