unpackaged/main/default/objects/Contact/fields/TECH_Email_To_be_updated__c.field-meta.xml
<CustomField>
    <fullName>TECH_Email_To_be_updated__c</fullName>
    <formula>NOT( Email =  TECH_Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Email To be updated</label>
    <type>Checkbox</type>
</CustomField>