unpackaged/main/default/objects/Contact/fields/TECH_Force_MKT_Sync_False__c.field-meta.xml
<CustomField>
    <fullName>TECH_Force_MKT_Sync_False__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Force MKT Sync False</label>
    <type>Checkbox</type>
</CustomField>