unpackaged/main/default/objects/Contact/fields/TECH_IS_TS__c.field-meta.xml
<CustomField>
    <fullName>TECH_IS_TS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH IS TS</label>
    <type>Checkbox</type>
</CustomField>