unpackaged/main/default/objects/Contact/fields/TECH_Marketo_Force_Update__c.field-meta.xml
<CustomField>
    <fullName>TECH_Marketo_Force_Update__c</fullName>
    <label>TECH Marketo Force Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>