unpackaged/main/default/objects/Contact/fields/Usergroupe__c.field-meta.xml
<CustomField>
    <fullName>Usergroupe__c</fullName>
    <label>User groupe</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERP High</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>ERP Middle</fullName>
            </value>
            <value>
                <fullName>Cercle RH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>