unpackaged/main/default/objects/Contact/recordTypes/Customer_User.recordType-meta.xml
<RecordType>
    <fullName>Customer_User</fullName>
    <active>true</active>
    <label>Customer User</label>
</RecordType>