unpackaged/main/default/objects/Contact/recordTypes/Sales_contact.recordType-meta.xml
<RecordType>
    <fullName>Sales_contact</fullName>
    <active>true</active>
    <label>Sales contact</label>
</RecordType>