unpackaged/main/default/objects/Contact/validationRules/VR003_Email_format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR003_Email_format_Validation</fullName>
    <active>false</active>
    <description>Contact - To validate the email format as x@x.xx and not in capital letters</description>
    <errorConditionFormula>NOT(REGEX ( UPPER(Email)  ,"^[A-Z0-9._%+-/!#$%&amp;'*=?^_`{|}~]+@[A-Z0-9.-]+\\.[A-Z]{2,4}$"))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>This email does nto have the good format, please review it.</errorMessage>
</ValidationRule>