unpackaged/main/default/objects/Contact/validationRules/VR004_MandatoryFieldForCustomerUser.validationRule-meta.xml
<ValidationRule>
    <fullName>VR004_MandatoryFieldForCustomerUser</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
NOT( RecordType.DeveloperName &lt;&gt; 'Customer_User'),
OR (
				ISBLANK(LastName),
				ISBLANK(FirstName)
)
)</errorConditionFormula>
    <errorMessage>First Name and Last Name are mandatory fields.</errorMessage>
</ValidationRule>