unpackaged/main/default/objects/Contact/validationRules/VR_Contact004_Email_format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Contact004_Email_format_Validation</fullName>
    <active>true</active>
    <description>Contact - To validate the email format as x@x.xx and not in capital letters</description>
    <errorConditionFormula>AND( 
    NOT( $User.BypassVR__c ),
				NOT(INCLUDES( $User.List_of_VR_to_By_Pass__c ,"VR_Contact004_Email_format_Validation")), 
    NOT(ISBLANK( Email )) ,
    (NOT(REGEX ( Email ,"([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,}|[0-9]{1,3})"))))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>This email does not have the good format, please review it.</errorMessage>
</ValidationRule>