unpackaged/main/default/objects/Contact/validationRules/VR_Contact06_PhoneMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Contact06_PhoneMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
    NOT( $User.BypassVR__c ),
				NOT( RecordType.DeveloperName = 'Customer_User'),
  		NOT( INCLUDES($User.List_of_VR_to_By_Pass__c,"VR_Contact06_PhoneMandatory")), 
				$Profile.Name &lt;&gt; "System Administrator",
				NOT (ISPICKVAL( LeadSource,"LinkedIn")),
				ISBLANK( Direct_Phone__c ),
				ISBLANK( Phone ),
				ISBLANK( MobilePhone )
				)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>At least one phone number is mandatory</errorMessage>
</ValidationRule>