unpackaged/main/default/objects/Contact/validationRules/VR_Contact07_NoNameEmptying.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Contact07_NoNameEmptying</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( $User.BypassVR__c ),
				NOT( RecordType.DeveloperName = 'Customer_User'),
	NOT(INCLUDES( $User.List_of_VR_to_By_Pass__c, "VR_Contact07_NoNameEmptying")),
	NOT(ISPICKVAL(LeadSource,"LinkedIn")),
    OR (
								AND (ISNEW(), 
									OR(
										ISBLANK( TEXT(Salutation) ),
										ISBLANK( FirstName )
								      )
													),
								AND (
												ISBLANK( TEXT(Salutation) ), 
												ISCHANGED(Salutation)
												), 
								AND (
												ISBLANK( FirstName ), 
												ISCHANGED(FirstName)
												)
								)
				)</errorConditionFormula>
    <errorMessage>Salutation and First Name are mandatory fields.</errorMessage>
</ValidationRule>